# tucker-conv

./: README.md  setup.cfg
tucker_conv/: __init__.py  conv.py
tucker_conv.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
