[metadata]
name = tucker_conv
version = 1.0.0
author = Pranav Pulijala
description = Implementation of Tucker Convolution Layer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/novice03/tucker-conv
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True